--- a/Draughts.Core/Draughts.Core.csproj
+++ b/Draughts.Core/Draughts.Core.csproj
@@ -45,17 +45,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Board.cs" />
-    <Compile Include="BoardState.cs" />
+    <Compile Include="Board\Board.cs" />
+    <Compile Include="Board\BoardState.cs" />
     <Compile Include="Game.cs" />
-    <Compile Include="Location.cs" />
-    <Compile Include="Move.cs" />
-    <Compile Include="Piece.cs" />
-    <Compile Include="Player.cs" />
+    <Compile Include="Board\Location.cs" />
+    <Compile Include="MoveMapping\Move.cs" />
+    <Compile Include="Player\Piece.cs" />
+    <Compile Include="Player\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MoveMap.cs" />
-    <Compile Include="SequenceNode.cs" />
-    <Compile Include="Square.cs" />
+    <Compile Include="MoveMapping\MoveTree.cs" />
+    <Compile Include="MoveMapping\MoveNode.cs" />
+    <Compile Include="Board\Square.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
