Some refactoring, and initial commit on Web site UI.

--- a/Draughts.Core/Draughts.Core.csproj
+++ b/Draughts.Core/Draughts.Core.csproj
@@ -47,8 +47,10 @@
   <ItemGroup>
     <Compile Include="Board\Board.cs" />
     <Compile Include="Board\BoardState.cs" />
-    <Compile Include="Game.cs" />
+    <Compile Include="Board\PieceLocation.cs" />
+    <Compile Include="Game\Game.cs" />
     <Compile Include="Board\Location.cs" />
+    <Compile Include="Game\IPlayDraughts.cs" />
     <Compile Include="MoveMapping\Move.cs" />
     <Compile Include="Player\Piece.cs" />
     <Compile Include="Player\Player.cs" />
