--- a/Draughts.Core/Draughts.Core.csproj
+++ b/Draughts.Core/Draughts.Core.csproj
@@ -46,7 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Board\Board.cs" />
-    <Compile Include="Board\BoardState.cs" />
+    <Compile Include="Board\PieceState.cs" />
     <Compile Include="Board\PieceInfo.cs" />
     <Compile Include="Game\Game.cs" />
     <Compile Include="Game\IPlayDraughts.cs" />
@@ -54,8 +54,9 @@
     <Compile Include="Player\Piece.cs" />
     <Compile Include="Player\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MoveMapping\MoveTree.cs" />
-    <Compile Include="MoveMapping\MoveTreeNode.cs" />
+    <Compile Include="MoveMapping\MoveTree\MoveTree.cs" />
+    <Compile Include="MoveMapping\MoveStep.cs" />
+    <Compile Include="MoveMapping\MoveTree\MoveTreeNode.cs" />
     <Compile Include="Board\Square.cs" />
   </ItemGroup>
   <ItemGroup>
