--- a/Draughts.Console/Draughts.Console.csproj
+++ b/Draughts.Console/Draughts.Console.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GameRunner.cs" />
+    <Compile Include="ConsoleGameAgent.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
