--- a/Draughts.Core/Draughts.Core.csproj
+++ b/Draughts.Core/Draughts.Core.csproj
@@ -46,10 +46,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Board\Board.cs" />
-    <Compile Include="Board\PieceState.cs" />
+    <Compile Include="Board\BoardState.cs" />
     <Compile Include="Board\PieceInfo.cs" />
+    <Compile Include="Game\BeforeMoveEventArgs.cs" />
     <Compile Include="Game\Game.cs" />
-    <Compile Include="Game\IPlayDraughts.cs" />
+    <Compile Include="Game\GameEndsEventArgs.cs" />
+    <Compile Include="Game\MoveEventArgs.cs" />
     <Compile Include="MoveMapping\Move.cs" />
     <Compile Include="Player\Piece.cs" />
     <Compile Include="Player\Player.cs" />
