--- a/Draughts.Core/Draughts.Core.csproj
+++ b/Draughts.Core/Draughts.Core.csproj
@@ -52,13 +52,13 @@
     <Compile Include="Game\Game.cs" />
     <Compile Include="Game\GameEndsEventArgs.cs" />
     <Compile Include="Game\MoveEventArgs.cs" />
-    <Compile Include="MoveMapping\Move.cs" />
+    <Compile Include="Moves\Move.cs" />
     <Compile Include="Player\Piece.cs" />
     <Compile Include="Player\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MoveMapping\MoveTree\MoveTree.cs" />
-    <Compile Include="MoveMapping\MoveStep.cs" />
-    <Compile Include="MoveMapping\MoveTree\MoveTreeNode.cs" />
+    <Compile Include="Moves\MoveMap\MoveMap.cs" />
+    <Compile Include="Moves\MoveStep.cs" />
+    <Compile Include="Moves\MoveMap\MoveMapNode.cs" />
     <Compile Include="Board\Square.cs" />
   </ItemGroup>
   <ItemGroup>
