--- a/Draughts.Core/Draughts.Core.csproj
+++ b/Draughts.Core/Draughts.Core.csproj
@@ -52,14 +52,14 @@
     <Compile Include="Game\Game.cs" />
     <Compile Include="Game\EventArgs\GameEndsEventArgs.cs" />
     <Compile Include="Game\EventArgs\MoveEventArgs.cs" />
-    <Compile Include="Moves\Move.cs" />
+    <Compile Include="Board\Moves\Move.cs" />
     <Compile Include="Board\Piece.cs" />
     <Compile Include="DraughtsExtensions.cs" />
     <Compile Include="Player\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Moves\MoveMap\MoveMap.cs" />
-    <Compile Include="Moves\MoveStep.cs" />
-    <Compile Include="Moves\MoveMap\MoveMapNode.cs" />
+    <Compile Include="Board\Moves\MoveMap\MoveMap.cs" />
+    <Compile Include="Board\Moves\MoveStep.cs" />
+    <Compile Include="Board\Moves\MoveMap\MoveMapNode.cs" />
     <Compile Include="Board\Square.cs" />
   </ItemGroup>
   <ItemGroup>
